Minor mods on buildscript. Changed deprecated method call GsonBuilder.